samples/_failures_safe/1761249630_63bb6c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb082c1a.c: In function ‘main’:
./samples/SAFE/__tmp_eb082c1a.c:134:9: error: expected declaration or statement at end of input
  134 |         printf("Failed to add compression block 1\n");
      |         ^~~~~~
./samples/SAFE/__tmp_eb082c1a.c:134:9: error: expected declaration or statement at end of input
